Add complete UPSC prep application with Supabase authentication
- React Native mobile app with authentication
- Next.js admin panel for content management
- Supabase integration for authentication
- Articles, notes, mind maps, and roadmap features
- Mobile API endpoints
- Admin dashboard for managing content

--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -9,37 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "drizzle-orm": "^0.29.1",
-    "postgres": "^3.4.3",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^3.22.4",
-    "lucide-react": "^0.294.0",
+    "@lexical/code": "^0.12.5",
+    "@lexical/link": "^0.12.5",
+    "@lexical/list": "^0.12.5",
     "@lexical/react": "^0.12.5",
     "@lexical/rich-text": "^0.12.5",
-    "@lexical/list": "^0.12.5",
-    "@lexical/link": "^0.12.5",
-    "@lexical/code": "^0.12.5",
     "@lexical/selection": "^0.12.5",
     "@lexical/utils": "^0.12.5",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/supabase-js": "^2.87.1",
+    "bcryptjs": "^2.4.3",
+    "drizzle-orm": "^0.29.1",
+    "jsonwebtoken": "^9.0.2",
     "lexical": "^0.12.5",
-    "multer": "^1.4.5-lts.1"
+    "lucide-react": "^0.294.0",
+    "multer": "^1.4.5-lts.1",
+    "next": "^14.0.4",
+    "postgres": "^3.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.3.6",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.20.6",
     "postcss": "^8.4.32",
-    "drizzle-kit": "^0.20.6"
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   }
 }
-
