--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.8.0",
+    "@supabase/supabase-js": "^2.87.1",
     "expo": "~54.0.25",
     "expo-apple-authentication": "~8.0.7",
     "expo-auth-session": "~7.0.9",
@@ -47,6 +48,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.2",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.5.1"
