--- a/my-app/package.json
+++ b/my-app/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^15.0.3",
+    "@mui/icons-material": "^7.3.6",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.8.0",
     "@supabase/supabase-js": "^2.87.1",
+    "@tabler/icons-react": "^3.35.0",
     "expo": "~54.0.25",
     "expo-apple-authentication": "~8.0.7",
     "expo-auth-session": "~7.0.9",
